[package]
name = "glutin-winit"
version = "0.4.2"
authors = ["Kirill Chibisov <contact@kchibisov.com>"]
description = "Glutin bootstrapping helpers with winit"
keywords = ["windowing", "opengl", "winit"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rust-windowing/glutin"
edition = "2021"

[features]
default = ["egl", "glx", "x11", "wayland", "wgl"]
egl = ["glutin/egl"]
glx = ["glutin/glx", "glutin/x11", "winit/x11", "x11"]
wgl = ["glutin/wgl"]
x11 = ["glutin/x11", "winit/x11"]
wayland = ["glutin/wayland", "winit/wayland"]

[dependencies]
glutin = { version = "0.31.0", path = "../glutin", default-features = false }
raw-window-handle = "0.5.2"
winit = { version = "0.29.2", default-features = false, features = ["rwh_05"] }

[build-dependencies]
cfg_aliases = "0.1.1"
