[package]
name = "glutin-winit"
version = "0.5.0"
authors = ["Kirill Chibisov <contact@kchibisov.com>"]
description = "Glutin bootstrapping helpers with winit"
keywords = ["windowing", "opengl", "winit"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rust-windowing/glutin"
edition = "2021"
rust-version = "1.70.0"

[features]
default = ["egl", "glx", "x11", "wayland", "wgl"]
egl = ["glutin/egl"]
glx = ["glutin/glx", "x11"]
wgl = ["glutin/wgl"]
x11 = ["glutin/x11", "winit/x11"]
wayland = ["glutin/wayland", "winit/wayland"]

[dependencies]
glutin = { version = "0.32.0", path = "../glutin", default-features = false }
raw-window-handle = "0.6"
winit = { version = "0.30.0", default-features = false, features = ["rwh_06"] }

[build-dependencies]
cfg_aliases = "0.2.1"
