[package]
name = "glutin-winit"
version = "0.5.0"
authors = ["Kirill Chibisov <contact@kchibisov.com>"]
description = "Glutin bootstrapping helpers with winit"
keywords = ["windowing", "opengl", "winit"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rust-windowing/glutin"
edition = "2021"
rust-version = "1.71.0"

[features]
default = ["egl", "glx", "x11", "wayland", "wgl"]
egl = ["glutin/egl"]
glx = ["glutin/glx", "x11"]
wgl = ["glutin/wgl"]
x11 = ["glutin/x11", "winit/x11"]
wayland = ["glutin/wayland", "winit/wayland"]

[dependencies]
glutin = { version = "0.32.0", path = "../glutin", default-features = false }
raw-window-handle = { workspace = true }
winit = { workspace = true, features = ["rwh_06"] }

[build-dependencies]
cfg_aliases = { workspace = true }
