[package]
name = "glutin"
version = "0.31.3"
authors = ["Kirill Chibisov <contact@kchibisov.com>"]
description = "Cross-platform OpenGL context provider."
keywords = ["windowing", "opengl", "egl"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-windowing/glutin"
documentation = "https://docs.rs/glutin"
rust-version = "1.65.0"
edition = "2021"

[features]
default = ["egl", "glx", "x11", "wayland", "wgl"]
egl = ["glutin_egl_sys", "libloading"]
glx = ["x11", "glutin_glx_sys", "libloading"]
wgl = ["glutin_wgl_sys", "windows-sys"]
x11 = ["x11-dl"]
wayland = ["wayland-sys", "egl"]

[dependencies]
bitflags = "2.2.1"
libloading = { version = "0.8.0", optional = true }
once_cell = "1.13"
raw-window-handle = "0.5.2"

[target.'cfg(windows)'.dependencies]
glutin_egl_sys = { version = "0.6.0", path = "../glutin_egl_sys", optional = true }
glutin_wgl_sys = { version = "0.5.0", path = "../glutin_wgl_sys", optional = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]
optional = true

[target.'cfg(target_os = "android")'.dependencies]
glutin_egl_sys = { version = "0.6.0", path = "../glutin_egl_sys" }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
glutin_egl_sys = { version = "0.6.0", path = "../glutin_egl_sys", optional = true }
glutin_glx_sys = { version = "0.5.0", path = "../glutin_glx_sys", optional = true }
wayland-sys = { version = "0.31.1", default-features = false, features = ["egl", "client", "dlopen"], optional = true }
x11-dl = { version = "2.20.0", optional = true }

[target.'cfg(any(target_os = "macos"))'.dependencies]
cgl = "0.3.2"
core-foundation = "0.9.3"
# Enable `relax-void-encoding` until https://github.com/madsmtm/objc2/pull/526 is resolved
objc2 = { version = "0.4.1", features = ["relax-void-encoding"] }
dispatch = "0.2.0"

[target.'cfg(any(target_os = "macos"))'.dependencies.icrate]
version = "0.0.4"
features = [
    "dispatch",
    "Foundation",
    "Foundation_NSArray",
    "Foundation_NSThread",
    "AppKit",
    "AppKit_NSView",
    "AppKit_NSWindow",
]

[build-dependencies]
cfg_aliases = "0.1.1"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "aarch64-linux-android",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "i686-unknown-linux-gnu",
    "i686-pc-windows-msvc",
]
default-target = "x86_64-unknown-linux-gnu"
