[package]
name = "glutin"
version = "0.32.0"
authors = ["Kirill Chibisov <contact@kchibisov.com>"]
description = "Cross-platform OpenGL context provider."
keywords = ["windowing", "opengl", "egl"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-windowing/glutin"
documentation = "https://docs.rs/glutin"
rust-version = "1.70.0"
edition = "2021"

[features]
default = ["egl", "glx", "x11", "wayland", "wgl"]
egl = ["glutin_egl_sys", "libloading"]
glx = ["x11", "glutin_glx_sys", "libloading"]
wgl = ["glutin_wgl_sys", "windows-sys"]
x11 = ["x11-dl"]
wayland = ["wayland-sys", "egl"]

[dependencies]
bitflags = "2.2.1"
libloading = { version = "0.8.0", optional = true }
once_cell = "1.13"
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
glutin_egl_sys = { version = "0.7.0", path = "../glutin_egl_sys", optional = true }
glutin_wgl_sys = { version = "0.6.0", path = "../glutin_wgl_sys", optional = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]
optional = true

[target.'cfg(target_os = "android")'.dependencies]
glutin_egl_sys = { version = "0.7.0", path = "../glutin_egl_sys" }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
glutin_egl_sys = { version = "0.7.0", path = "../glutin_egl_sys", optional = true }
glutin_glx_sys = { version = "0.6.0", path = "../glutin_glx_sys", optional = true }
wayland-sys = { version = "0.31.1", default-features = false, features = ["egl", "client", "dlopen"], optional = true }
x11-dl = { version = "2.20.0", optional = true }

[target.'cfg(any(target_os = "macos"))'.dependencies]
cgl = "0.3.2"
core-foundation = "0.9.3"
objc2 = "0.5.1"
dispatch = "0.2.0"

[target.'cfg(any(target_os = "macos"))'.dependencies.objc2-foundation]
version = "0.2.0"
features = [
    "dispatch",
    "NSArray",
    "NSThread",
]

[target.'cfg(any(target_os = "macos"))'.dependencies.objc2-app-kit]
version = "0.2.0"
features = [
    "NSResponder",
    "NSView",
    "NSWindow",
    "NSOpenGL",
]

[build-dependencies]
cfg_aliases = "0.2.1"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "aarch64-linux-android",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "i686-unknown-linux-gnu",
    "i686-pc-windows-msvc",
]
default-target = "x86_64-unknown-linux-gnu"
