[package]
name = "glutin_egl_sys"
version = "0.1.5"
authors = ["The glutin contributors", "Hal Gentz <zegentzy@protonmail.com>"]
description = "The egl bindings for glutin"
repository = "https://github.com/rust-windowing/glutin"
license = "Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2018"

[build-dependencies]
gl_generator = "0.14"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = [
    "winnt",
    "winuser",
    "wingdi",
    "libloaderapi",
]
