[package]
name = "glutin_egl_sys"
version = "0.1.6"
authors = ["The glutin contributors", "Hal Gentz <zegentzy@protonmail.com>"]
description = "The egl bindings for glutin"
repository = "https://github.com/rust-windowing/glutin"
license = "Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2018"

[build-dependencies]
gl_generator = "0.14"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.36"
features = [
    "Win32_Foundation",
]
