[package]
name = "glutin_egl_sys"
version = "0.6.0"
authors = ["Kirill Chibisov <contact@kchibisov.com>"]
description = "The egl bindings for glutin"
repository = "https://github.com/rust-windowing/glutin"
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.65.0"
edition = "2021"

[build-dependencies]
gl_generator = "0.14"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
]
