[package]
name = "glutin_examples"
version = "0.1.3"
authors = ["Kirill Chibisov <contact@kchibisov.com>"]
description = "Examples for glutin"
repository = "https://github.com/rust-windowing/glutin"
license = "Apache-2.0"
readme = "../README.md"
rust-version = "1.65.0"
edition = "2021"
publish = false

[features]
default = ["egl", "glx", "x11", "wayland", "wgl"]
egl = ["glutin-winit/egl", "png"]
glx = ["glutin-winit/glx"]
wgl = ["glutin-winit/wgl"]
x11 = ["glutin-winit/x11"]
wayland = ["glutin-winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita"]

[dependencies]
glutin = { path = "../glutin", default-features = false }
winit = { version = "0.28.1", default-features = false }
glutin-winit = { path = "../glutin-winit", default-features = false }
raw-window-handle = "0.5.0"
png = { version = "0.17.6", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.28.1", default-features = false, features = ["android-native-activity"] }

[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.1.1"

[[example]]
name = "android"
crate-type = ["cdylib"]

[[example]]
name = "egl_device"
required-features = ["egl"]
