[package]
name = "glutin_examples"
version = "0.1.3"
authors = ["Kirill Chibisov <contact@kchibisov.com>"]
description = "Examples for glutin"
repository = "https://github.com/rust-windowing/glutin"
license = "Apache-2.0"
readme = "../README.md"
rust-version = "1.70.0"
edition = "2021"
publish = false

[features]
default = ["egl", "glx", "x11", "wayland", "wgl"]
egl = ["glutin-winit/egl", "png"]
glx = ["glutin-winit/glx"]
wgl = ["glutin-winit/wgl"]
x11 = ["glutin-winit/x11"]
wayland = ["glutin-winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita"]

[dependencies]
glutin = { path = "../glutin", default-features = false }
glutin-winit = { path = "../glutin-winit", default-features = false }
png = { version = "0.17.6", optional = true }
raw-window-handle = "0.6"
winit = { version = "0.30.0", default-features = false, features = ["rwh_06"] }
drm = { version = "0.12", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30.0", default-features = false, features = ["android-native-activity", "rwh_06"] }

[target.'cfg(target_env = "ohos")'.dependencies]
openharmony_ability = { version = "0.0.1" }
openharmony_ability_derive = { version = "0.0.1" }

[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.2.1"

[[example]]
name = "android"
crate-type = ["cdylib"]

[[example]]
name = "ohos_test"
crate-type = ["cdylib"]

[[example]]
name = "egl_device"
required-features = ["egl"]

[[example]]
name = "drm"
required-features = ["egl", "drm"]
