[package]
name = "glutin_gles2_sys"
version = "0.1.4"
authors = ["The glutin contributors", "Hal Gentz <zegentzy@protonmail.com>"]
description = "The gles2 bindings for glutin"
repository = "https://github.com/rust-windowing/glutin"
license = "Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2018"

[build-dependencies]
gl_generator = "0.13"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
