[package]
name = "glutin_glx_sys"
version = "0.1.6"
authors = ["The glutin contributors", "Hal Gentz <zegentzy@protonmail.com>"]
description = "The glx bindings for glutin"
repository = "https://github.com/rust-windowing/glutin"
license = "Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2018"

[build-dependencies]
gl_generator = "0.13"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os="dragonfly", target_os="netbsd", target_os="openbsd"))'.dependencies]
x11-dl = "2.18.3"
