[package]
name = "glutin_lighter"
version = "0.1.0-alpha1"
authors = ["The glutin contributors", "Freya Gentz <zegentzy@protonmail.com>"]
description = "A thin abstraction layer for glutin that hopes to stop users from falling into common pitfalls."
repository = "https://github.com/rust-windowing/glutin"
license = "Apache-2.0"
readme = "../README.md"
edition = "2018"

[dependencies]
glutin = { version = "0.23.0-alpha1", path = "../glutin" }
log = "0.4"
takeable-option = "0.5"
