[package]
name = "glutin_wgl_sys"
version = "0.1.3"
authors = ["The glutin contributors", "Hal Gentz <zegentzy@protonmail.com>"]
description = "The wgl bindings for glutin"
repository = "https://github.com/tomaka/glutin"
license = "Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2018"

[build-dependencies]
gl_generator = "0.11"
