[package]
name = "glutin-ios-example"
version = "0.1.0"
authors = ["Sebastian Imlay <sebastian.imlay@gmail.com>"]
edition = '2018'

[lib]
name = "glutin_ios_example"
crate-type = ["staticlib"]

[dependencies]
raw-window-handle = "0.3.1"
takeable-option = "0.4"
glutin = { path = "../../../glutin" }


[build-dependencies]
gl_generator = "0.14.0"
